--- a/.github/workflows/chef-lint-unit.yml
+++ b/.github/workflows/chef-lint-unit.yml
@@ -1,6 +1,6 @@
 name: Lint & Unit test
 
-on:
+"on":
   workflow_call:
     secrets:
       CI_USER_TOKEN:
@@ -16,16 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install Chef
-        uses: actionshub/chef-install@2.0.4
+        uses: actionshub/chef-install@3.0.0
       - name: Run RSpec
         run: chef exec rspec -f j -o tmp/rspec_results.json -f p
         env:
           CHEF_LICENSE: accept-no-persist
           CI_USER_TOKEN: ${{ secrets.CI_USER_TOKEN }}
       - name: RSpec Report
-        uses: SonicGarden/rspec-report-action@v2.1.1
+        uses: SonicGarden/rspec-report-action@v3.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           json-path: tmp/rspec_results.json
@@ -35,9 +35,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install Chef
-        uses: actionshub/chef-install@2.0.4
+        uses: actionshub/chef-install@3.0.0
       - name: Run Cookstyle
         run: chef exec cookstyle --display-cop-names --extra-details
         env:
@@ -47,14 +47,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Run yaml Lint
-        uses: actionshub/yamllint@v1.1.2
+        uses: actionshub/yamllint@main
 
   mdl:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Run Markdown Lint
-        uses: actionshub/markdownlint@v2.1.2
+        uses: actionshub/markdownlint@main
